# wobbler

./: README.md  main.spec  pyproject.toml  wobbler.py
src/wobbler/: main.py  wobbler.py
